syntax = "proto3";

package deposits.v1;

option go_package = "deposits/v1;depositsv1";

service DepositsService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc ReceiveReceipt(ReceiveReceiptRequest) returns (ReceiveReceiptResponse);
}

message ReceiveReceiptRequest {
  string account_id = 1;
  Receipt receipt = 2;
}

message ReceiveReceiptResponse {
  Receipt receipt = 1;
}

message Receipt {
  string id = 1;
  int64 allocated_amount = 2;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Deposit deposit = 1;
}

message CreateRequest {
  string investor_id = 1;
  Deposit deposit = 2;
}

message CreateResponse {
  Deposit deposit = 1;
}

message Deposit {
  string id = 1;
  repeated Pot pots = 2;
}

message Pot {
  string id = 1;
  string name = 2;
  repeated Account accounts = 3;
}

enum WrapperType {
  WRAPPER_TYPE_UNSPECIFIED = 0;
  WRAPPER_TYPE_GIA = 1;
  WRAPPER_TYPE_ISA = 2;
  WRAPPER_TYPE_SIPP = 3;
}

message Account {
  string id = 1;
  WrapperType wrapper_type = 2;
  int64 nominal_amount = 3;
  int64 total_allocated_amount = 4;
}
